kustomizations/streaming/apps/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  replicas: 0
  selector:
    matchLabels:
      app: plex
      app.kubernetes.io/name: plex
  template:
    metadata:
      labels:
        app: plex
        app.kubernetes.io/name: plex
        app.kubernetes.io/part-of: streaming-stack
    spec:
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:latest
          ports:
            - containerPort: 32400
          volumeMounts:
            - name: config
              mountPath: /config
            - name: dri
              mountPath: /dev/dri
            - name: media
              mountPath: /media
      nodeSelector:
        kubernetes.io/hostname: castillo
      volumes:
        - name: dri
          hostPath:
            path: /dev/dri
        - name: config
          hostPath:
            path: /mnt/plex
            type: DirectoryOrCreate
        - name: media
          hostPath:
            path: /media
            type: DirectoryOrCreate
