kustomizations/streaming/apps/plex/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-lb
  annotations:
    external-dns.alpha.kubernetes.io/hostname: plex.lan
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.37
  selector:
    app: plex
  ports:
    # Puerto principal (web + streaming)
    - name: plex-http
      protocol: TCP
      port: 80
      targetPort: 32400

    # DLNA discovery
    - name: plex-dlna
      protocol: UDP
      port: 1900
      targetPort: 1900

    # mDNS / Bonjour
    - name: plex-mdns
      protocol: UDP
      port: 5353
      targetPort: 5353

    # Plex companion
    - name: plex-companion
      protocol: TCP
      port: 8324
      targetPort: 8324

    # GDM discovery
    - name: plex-gdm-1
      protocol: UDP
      port: 32410
      targetPort: 32410
    - name: plex-gdm-2
      protocol: UDP
      port: 32412
      targetPort: 32412
    - name: plex-gdm-3
      protocol: UDP
      port: 32413
      targetPort: 32413
    - name: plex-gdm-4
      protocol: UDP
      port: 32414
      targetPort: 32414

    # DLNA server
    - name: plex-dlna-tcp
      protocol: TCP
      port: 32469
      targetPort: 32469
