kustomizations/streaming/apps/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: plex.citocafecito.work
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: plex
              port:
                number: 80
